--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,16 @@
     	<artifactId>json</artifactId>
     	<version>20140107</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+		
 	
 	
   </dependencies>
+  <build>
+  </build>
 </project>
